--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-# Путь к весам YOLO (если не задано, используется best.pt из корня)
-MODEL_PATH=best.pt
+# Путь к весам YOLO
+MODEL_PATH=./models/model.pt
 
 # Разрешённые источники CORS (через запятую)
-CORS_ORIGINS=http://localhost:5173,http://localhost:5174
+CORS_ORIGINS=http://localhost:5173
+
+# # Путь к весам YOLO (если не задано, используется best.pt из корня)
+# MODEL_PATH=best.pt
+
+# # Разрешённые источники CORS (через запятую)
+# CORS_ORIGINS=http://localhost:5173,http://localhost:5174
+
+# # Регэксп для разрешённых доменов (например, все проекты на Vercel)
+# CORS_ORIGIN_REGEX=https://.*\.vercel\.app
