--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MODEL_PATH=best.pt
 # Разрешённые источники CORS (через запятую)
 # Добавляем оба порта фронта на случай автоперезапуска
 CORS_ORIGINS=http://localhost:5173,http://localhost:5174
+
+# Регэксп для доменов Vercel (любой проект *.vercel.app)
+CORS_ORIGIN_REGEX=https://.*\.vercel\.app
